Checkpoint for any problem that can occur

--- a/app1/templates/deposit.html
+++ b/app1/templates/deposit.html
@@ -1,5 +1,8 @@
 {% include 'navbar.html' %}
 <style>
+    *{
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+    }
     form {
         margin: 20px;
         padding: 20px;
