--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -12,6 +12,7 @@
         <a href="{% url 'withdraw' %}">Withdraw</a>
         <a href="{% url 'deposit' %}">Deposit</a>
         <a href="{% url 'status' %}">Status</a>
+        <a href="{% url 'transfer' %}">Transfer</a>
     </div>
 </body>
 </html>
@@ -19,6 +20,7 @@
 <style>
     body{
         background-color: #f1f1f1;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
     }
     h1{
         text-align: center;
@@ -37,5 +39,8 @@
     p{
         text-align: center;
         color: #333;
+    }
+    nav{
+        margin: 20px;
     }
 </style>
