--- a/app1/templates/status.html
+++ b/app1/templates/status.html
@@ -19,7 +19,7 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            align-items: center;
+            align-content: center;
             justify-content: space-between;
             
         }
@@ -37,15 +37,18 @@
         margin: 20px;
         }
         h2{
-            margin: auto;
             font-size: 40px;
             border: 3px solid #000;
             padding: 10px 25px 10px 25px;
             border-radius: 30px;
             background-color: #EC3D3D;
             color: #ECECEC ;
-            margin-top: 130px;
-
+        }
+        .h2_box{
+            
+            justify-content: center;
+            align-items: center;
+            margin: auto;
         }
     </style>
 </head>
@@ -65,7 +68,9 @@
             {% endfor %}
 
         {% else %}
+        <div class="h2_box">
             <h2>No Movements</h2>
+        </div>
         {% endif %}
     </div>
 </body>
