--- a/app1/templates/withdraw.html
+++ b/app1/templates/withdraw.html
@@ -1,54 +1,70 @@
-{% include 'navbar.html' %}
-<style>
-    form {
-        margin: 20px;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #f9f9f9;
-    }
 
-    label {
-        display: block;
-        margin-bottom: 10px;
-    }
 
-    input[type="number"] {
-        padding: 5px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-
-    button[type="submit"] {
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-
-    h1{
-        margin-left: 20px;
-        color: #333;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Withdraw</title>
+    <style>
+        body{
+            background-color: #f1f1f1;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+        }
+        form {
+            margin: 20px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
     
-    }
-
-    nav,p{
-        margin: 20px;
+        label {
+            display: block;
+            margin-bottom: 10px;
+        }
     
-    }
-</style>
-<h1>How much money you want to Withdraw?</h1>
-<p>Your Balance: ${{user.balance}}</p>
-<form method="post">
-    {% csrf_token %}
-    <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="amount" required>
-    <button type="submit">Withdraw</button>
-</form>
-{% if messages %}
-    {% for message in messages %}
-        <p>{{ message }}</p>
-    {% endfor %}
-{% endif %}
+        input[type="number"] {
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+    
+        button[type="submit"] {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+    
+        h1{
+            margin-left: 20px;
+            color: #333;
+        
+        }
+    
+        nav,p{
+            margin: 20px;
+        
+        }
+    </style>
+</head>
+<body>
+    {% include 'navbar.html' %}
+    <h1>How much money you want to Withdraw?</h1>
+    <p>Your Balance: ${{user.balance}}</p>
+    <form method="post">
+        {% csrf_token %}
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" name="amount" required>
+        <button type="submit">Withdraw</button>
+    </form>
+    {% if messages %}
+        {% for message in messages %}
+            <p>{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+</body>
+</html>
