--- a/app1/templates/status.html
+++ b/app1/templates/status.html
@@ -22,15 +22,17 @@
             align-content: center;
             justify-content: space-between;
             
+            
         }
         .movement{
             width: 200px;
-            margin: 25px ;
+            margin: 20px 70px 40px 70px ;
             padding: 10px;
             text-align: center;
             background-color: #333;
             color: #fff;
             text-decoration: none;
+            border-radius: 25px;
 
         }
         nav{
